website/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whats-new
  labels:
    app: whats-new
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whats-new
  template:
    metadata:
      labels:
        app: whats-new
    spec:
      containers:
        - name: whats-new
          image: ghcr.io/sayjeyhi/whats-new:latest
          ports:
            - containerPort: 3000

          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
          resources:
            limits:
              cpu: '500m'
              memory: '512Mi'
            requests:
              cpu: '250m'
              memory: '250Mi'
