website/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whats-new-service
spec:
  selector:
    app: whats-new
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
